<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgetPasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background2">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:alpha="10"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:theme="@style/EditTextTheme">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="TODO"
            android:padding="10dp"
            android:src="@drawable/ic_lock_white_128dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/amiko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/FORGOT_YOUR_PASSWORD"
            android:textColor="@color/White"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:fontFamily="@font/amiko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/forgetPassText"
            android:textColor="@color/White"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_mail_white_24dp"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:textColor="@color/White"
            android:textColorHint="@color/White" />


        <Button
            android:id="@+id/btnSendLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/sendLink"
            android:textColor="@color/White" />

    </LinearLayout>

</RelativeLayout>
