<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    android:background="@drawable/login_background2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="bottom">

            <androidx.appcompat.widget.AppCompatTextView
                android:fontFamily="@font/amiko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/app_name"
                android:textColor="@color/White"
                android:textSize="35sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:alpha="10"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="3dp"
                android:background="@color/transparent"
                android:ems="15"
                android:hint="Email"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textEmailAddress"
                android:paddingLeft="7dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"/>


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="3dp"
                android:background="@color/transparent"
                android:ems="15"
                android:hint="@string/password"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textPassword"
                android:paddingLeft="7dp"
                android:textColor="@color/White"
                android:textColorHint="@color/White"/>

            <CheckBox
                android:id="@+id/rememberMeCb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rememberMe"
                android:textColor="@color/White"
                android:textSize="12sp"
                android:textColorHint="@color/white"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:shadowColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorLink="@color/white"
                tools:targetApi="p" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:textColor="@color/White" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:id="@+id/llGoogleSignIn">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_google_logo"
                    android:padding="5dp">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/signInWithGoogle"
                    android:gravity="center"
                    android:textColor="@color/White"
                    android:paddingStart="-30dp">

                </TextView>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/forgetPasswordBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgetPassword"
                android:textSize="12sp"
                android:textColor="@color/White"
                android:visibility="gone"/>

            <Button
                android:id="@+id/createAccBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/createAccount"
                android:textSize="12sp"
                android:textColor="@color/White"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:fontFamily="@font/amiko"
                android:id="@+id/btnForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="|"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:fontFamily="@font/amiko"
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
