<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background2"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:fontFamily="@font/amiko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_marginBottom="15dp"
                android:text="@string/app_name"
                android:textColor="@color/White"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/appIconImgv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="TODO"
                android:layout_marginTop="-50dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/networkTryDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/appIconImgv"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/TRY_AGAIN_AFTER_CHECK_YOUR_NETWORK"
                android:visibility="gone"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/tryAgainButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_below="@+id/networkTryDesc"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:text="@string/TRY_AGAIN"
                android:textColor="@color/White"/>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>